--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        h1, h2, h3, h4, h5 {
+            color: #333;
+        }
+
+        h1 {
+            margin-bottom: 5px;
+        }
+
+        h2 {
+            margin-bottom: 10px;
+        }
+
+        p, ul, table {
+            margin-bottom: 15px;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
         }
 
-        th,
-        td {
+        th, td {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
@@ -21,6 +41,16 @@
 
         th {
             background-color: #f2f2f2;
+        }
+
+        img {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        hr {
+            border: 1px solid #dddddd;
+            margin: 20px 0;
         }
     </style>
 </head>
