--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
             Query Simplifier tool used to build and run DA queries in RUN SQL, DA Data Validation tool used to fetch
             data from DB & displayed in excel to compare with front end app.</li>
     </ul>
+    <hr>
+    <p>&copy; Srikanth Palla. All rights reserved.</p>
 
 
 </body>
