added social media links
added social media links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             margin: 20px;
         }
 
-        h1, h2, h3, h4, h5 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
             color: #333;
         }
 
@@ -24,7 +28,9 @@
             margin-bottom: 10px;
         }
 
-        p, ul, table {
+        p,
+        ul,
+        table {
             margin-bottom: 15px;
         }
 
@@ -33,7 +39,8 @@
             border-collapse: collapse;
         }
 
-        th, td {
+        th,
+        td {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
@@ -391,8 +398,18 @@
             data from DB & displayed in excel to compare with front end app.</li>
     </ul>
     <hr>
-    <p>&copy; Srikanth Palla. All rights reserved.</p>
+    <h3>Contact me</h3>
+    <p>
+        <a href="https://www.linkedin.com/in/pallasrikanth"> <img src="./Assests/Images/LINKEDIN_ICON.gif"
+                alt="LinkedIn Logo" style="width: 50px; height: 50px;"></a>
+        <a href="mailto: psreddyeee@gmail.com"><img src="./Assests/Images/email logo.gif" alt="Email"
+                style="width: 50px; height: 50px;"></a>
+    </p>
 
+    <hr>
+    <footer>
+        <p>&copy; Srikanth Palla. All rights reserved.</p>
+    </footer>
 
 </body>
 
